fix: UniversiFormTextInput legend spacing

--- a/src/components/UniversiForm2/inputs/UniversiFormTextInput/UniversiFormTextInput.module.less
+++ b/src/components/UniversiForm2/inputs/UniversiFormTextInput/UniversiFormTextInput.module.less
@@ -5,10 +5,10 @@
 .legend {
     display: flex;
     align-items: end;
-    justify-content: space-between;
 
     .char_counter {
         font-size: .75em;
+        margin-left: auto;
 
         &.full_char_counter {
             color: @font-color-alert;
